metadata/objects/Vedamo_Session__c.object
<CustomObject>
    <fields>
        <fullName>API_Object_Status__c</fullName>
        <defaultValue>&quot;active&quot;</defaultValue>
        <label>API Object Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>active</fullName>
                </value>
                <value>
                    <fullName>closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>API_Operation_Error__c</fullName>
        <label>API Operation Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>API_Operation_Status__c</fullName>
        <label>API Operation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Session_ID__c</fullName>
        <label>API Session ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Session_Key__c</fullName>
        <label>API Session Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Session_URL__c</fullName>
        <label>API Session URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Creator_User_ID__c</fullName>
        <label>Creator User ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permalink_ID__c</fullName>
        <label>Permalink ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Vedamo Session</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Vedamo Session Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vedamo Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>